fix(merlin-www-section-superfeature): display 2 images on mobiles and 4 on desktop for traveller

--- a/packages/merlin-www-section-superfeature/sass/traveller/traveller.scss
+++ b/packages/merlin-www-section-superfeature/sass/traveller/traveller.scss
@@ -20,6 +20,22 @@
 .c-superfeature__link {}
 
 .c-superfeature__images {}
+.c-superfeature__images--multiple {
+    .c-superfeature__image {
+        width: 50%;
+    }
+    .c-superfeature__image:nth-child(n+3) {
+        display: none;
+    }
+    @include min-screen($SUPERFEATURE_LARGE_BREAKPOINT) {
+        .c-superfeature__image {
+            width: 25%;
+        }
+        .c-superfeature__image:nth-child(n+3) {
+            display: inline-block;
+        }
+    }
+}
 .c-superfeature__image {
 	&:after {
 		background-color: rgba($MUSTASAARI, 0.2);
